--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+# Ignore les fichiers .env
 .env
+
+# Ignore les fichiers de cache Python
+__pycache__/
+*.pyc
+
+# Ignore les fichiers temporaires de Vercel
+.vercel/
+
+# Ignore les fichiers de log
+*.log
