--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.2.2
+Flask==2.1.1
 openai==0.27.0
 spotipy==2.19.0
-google-api-python-client==2.45.0
+requests==2.28.1
 python-dotenv==0.21.1
